# iced-editor

./: Cargo.toml  README.md
src/: main.rs
