[package]
name = "iced-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features = ["debug", "tokio", "highlighter"] }

tokio = { version = "1.33.0", features = ["fs"] }
rfd = "0.12.0"